# VisionProject

./: .gitignore  analyze_metrics.py  analyze_roi_impact.py  code.ipynb  convertoLuckFox.py  final.ipynb  finalwithLuckfox.ipynb  gemi.py  gemiNew.py  laneDetection.ipynb  laneDitection.ipynb  lane_detect.py  lane_polygons.csv  newGemi.py  newGemi_notebook.ipynb  process_metrics.py
configNPU/: convert_to_rknn.py  dataset.txt
configNPU/myC++/: CMakeLists.txt  luckfox_benchmark.py  main.cc
deploy_lane/: DEPLOY_AND_RUN_ADB.sh  DEPLOY_AND_RUN_FROM_PC.sh  lane_polygons.csv  luckfox_benchmark  luckfox_results.csv  luckfox_results_live.csv  pc_luckfox_detection_comparison.csv  pc_luckfox_live_metrics.csv  run.sh
